# HumanFollowingTurtlebot4

./: .gitignore  LICENSE  README.md  requirements.txt
install/: local_setup.sh  setup.sh
install/human_detector/lib/human_detector/: human_detector_exec
install/human_detector/share/human_detector/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/human_following_robot/lib/human_following_robot/: follower  h_follower
install/human_following_robot/share/human_following_robot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/human_detector/: package.xml  setup.cfg  setup.py
src/human_detector/config/: nav2_params.yaml
src/human_detector/human_detector/: human_detector_node.py  human_detector_node_v2.py  human_detector_node_v3.py  laser_scan_human_follower.py  nav2_human_follower.py  obstacle_avoider_human_follower.py  visual_tracker.py
src/human_following_robot/: package.xml  setup.cfg  setup.py
src/human_following_robot/human_following_robot/: human_follower_node.py  main.py
src/human_following_robot/human_following_robot/experiment_following_one_specific_person/: histogram_visual_tracker.py  one_human_follower.py
src/human_following_robot/human_following_robot/experiment_obstacle_avoiding_following_person/: human_detector_node.py  laser_processor.py  laser_scan_human_follower.py  nav2_human_follower.py  obstacle_avoidance.py  obstacle_avoider_human_follower.py  potential_field_human_follower.py
