<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>human_following_robot</name>
  <version>0.0.0</version>
  <description>ROS 2 Node designed to detect, track, and physically follow a person using a camera and a pre-trained YOLO object detection model.</description>
  <maintainer email="awacisse@gmail.com">Awa Cisse</maintainer>
  <maintainer email="jeremiahdawson556@gmail.com">Jeremiah Dawson</maintainer>
  <maintainer email="mai.tran1714@gmail.com">Mai Tran</maintainer>
  <maintainer email="masonsmoses@gmail.com">Mason Moses</maintainer>
  <license>MIT License</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
